Project

General

Profile

Actions

Bug #59048

closed

DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionId

Added by Casey Bodley about 1 year ago. Updated 1 day ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

100%

Source:
Tags:
versioning deletemulti backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when issued on a versioned bucket, an ObjectIdentifier1 without VersionId creates a delete marker:

    response = client.delete_objects(Bucket=bucket_name, Delete={'Objects': [{'Key': key}]})
    print(response['Deleted'])

but the DeletedObject2 output does not include the expected DeleteMarker and DeleteMarkerVersionId elements:
[{'Key': 'key'}]

[1] https://docs.aws.amazon.com/AmazonS3/latest/API/API_ObjectIdentifier.html
[2] https://docs.aws.amazon.com/AmazonS3/latest/API/API_DeletedObject.html

Related issues 3 (0 open3 closed)

Copied to rgw - Backport #59131: pacific: DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionIdRejectedCasey BodleyActions
Copied to rgw - Backport #59132: quincy: DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionIdResolvedCasey BodleyActions
Copied to rgw - Backport #59133: reef: DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionIdResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley about 1 year ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 50504
Actions #2

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59131: pacific: DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionId added
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59132: quincy: DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionId added
Actions #5

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59133: reef: DeleteObjects response does not include DeleteMarker/DeleteMarkerVersionId added
Actions #6

Updated by Backport Bot about 1 year ago

  • Tags changed from versioning deletemulti to versioning deletemulti backport_processed
Actions #7

Updated by Konstantin Shalygin 1 day ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF