rgw/s3: DeleteObjects response uses correct delete_marker flag

use delete_marker from the DeleteOp result, not from the sal::Object

Fixes: https://tracker.ceph.com/issues/59048

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 7288cbe28035867540b68dfcbc4894e1fb50ea2e)

Conflicts:
	src/rgw/rgw_op.cc versionid also changed by zipper commit 72d1a363263cf707d022ee756122236ba175cda2